<resources>
    <string name="app_name">GithubProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="pinned">Pinned</string>
    <string name="view_all"><u>View all</u></string>
    <string name="top_repositories">Top repositories</string>
    <string name="starred_repositories">Starred repositories</string>
    <string name="profile">Profile</string>
</resources>